--- a/README
+++ b/README
@@ -51,7 +51,7 @@ $ sudo make install
 
 --== Install python client library ==--
 
-$ sudo python setup install
+$ sudo python setup.py install
 
 --== Test ==--
 
